Обновление настроечных панелей
Для панелей добавил конструкторы, чтобы можно было панель создавать по имени. У меня в проектах используется файл для локализации, но кому не надо - тому не надо

Доделал панель с числовым вводом.

Сделал панель для ввода двух цифр

А ещё удалил все бесполезные файлы. Они были захвачены при первом коммите, а я и не заметил :(

--- a/src/main/java/kerlib/draw/settings/NumberPanel.form
+++ b/src/main/java/kerlib/draw/settings/NumberPanel.form
@@ -66,7 +66,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="spinnerUnvisible">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&#x22ee;"/>
+            <Property name="text" type="java.lang.String" value="&#x2192;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JScrollBar" name="scroll">
